--- a/cisreg-GWAS_wf/bibliography.bib
+++ b/cisreg-GWAS_wf/bibliography.bib
@@ -1,6 +1,13 @@
 %% Created using Papers on Fri, 24 Mar 2017.
 %% http://papersapp.com/papers/
 
+@misc{noauthor_rsat_nodate,
+	title = {{RSAT} {Var}-tools: an accessible and flexible framework to predict the impact of regulatory variants on transcription factor binding {\textbar} {bioRxiv}},
+	url = {https://www.biorxiv.org/content/10.1101/623090v1},
+	urldate = {2019-08-03},
+	file = {RSAT Var-tools\: an accessible and flexible framework to predict the impact of regulatory variants on transcription factor binding | bioRxiv:/Users/yvonfrid/Zotero/storage/TSA5IRMY/623090v1.html:text/html}
+}
+
 @article{RoadmapEpigenomicsConsortium:2015in,
 author = {{Roadmap Epigenomics Consortium} and Kundaje, Anshul and Meuleman, Wouter and Ernst, Jason and Bilenky, Misha and Yen, Angela and Heravi-Moussavi, Alireza and Kheradpour, Pouya and Zhang, Zhizhuo and Wang, Jianrong and Ziller, Michael J and Amin, Viren and Whitaker, John W and Schultz, Matthew D and Ward, Lucas D and Sarkar, Abhishek and Quon, Gerald and Sandstrom, Richard S and Eaton, Matthew L and Wu, Yi-Chieh and Pfenning, Andreas R and Wang, Xinchen and Claussnitzer, Melina and Liu, Yaping and Coarfa, Cristian and Harris, R Alan and Shoresh, Noam and Epstein, Charles B and Gjoneska, Elizabeta and Leung, Danny and Xie, Wei and Hawkins, R David and Lister, Ryan and Hong, Chibo and Gascard, Philippe and Mungall, Andrew J and Moore, Richard and Chuah, Eric and Tam, Angela and Canfield, Theresa K and Hansen, R Scott and Kaul, Rajinder and Sabo, Peter J and Bansal, Mukul S and Carles, Annaick and Dixon, Jesse R and Farh, Kai-How and Feizi, Soheil and Karlic, Rosa and Kim, Ah-Ram and Kulkarni, Ashwinikumar and Li, Daofeng and Lowdon, Rebecca and Elliott, GiNell and Mercer, Tim R and Neph, Shane J and Onuchic, Vitor and Polak, Paz and Rajagopal, Nisha and Ray, Pradipta and Sallari, Richard C and Siebenthall, Kyle T and Sinnott-Armstrong, Nicholas A and Stevens, Michael and Thurman, Robert E and Wu, Jie and Zhang, Bo and Zhou, Xin and Beaudet, Arthur E and Boyer, Laurie A and De Jager, Philip L and Farnham, Peggy J and Fisher, Susan J and Haussler, David and Jones, Steven J M and Li, Wei and Marra, Marco A and McManus, Michael T and Sunyaev, Shamil and Thomson, James A and Tlsty, Thea D and Tsai, Li-Huei and Wang, Wei and Waterland, Robert A and Zhang, Michael Q and Chadwick, Lisa H and Bernstein, Bradley E and Costello, Joseph F and Ecker, Joseph R and Hirst, Martin and Meissner, Alexander and Milosavljevic, Aleksandar and Ren, Bing and Stamatoyannopoulos, John A and Wang, Ting and Kellis, Manolis},
 title = {{Integrative analysis of 111 reference human epigenomes.}},
